--- a/q/275739.html
+++ b/q/275739.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
-<tr d-ix="1"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>143</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
-<tr d-ix="3"><td>092</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="0"><td>093</td><td>C gcc</td><td>240924T152414Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275753#275753">Blue</a></td></tr>
+<tr d-ix="1"><td>136</td><td>C++ gcc</td><td>240924T140339Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275751#275751">SquareFi</a></td></tr>
+<tr d-ix="2"><td>022</td><td>MathGolf</td><td>240925T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275772#275772">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>143</td><td>Bash</td><td>240924T090427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275744#275744">Themooni</a></td></tr>
 <tr d-ix="4"><td>024</td><td>Charcoal</td><td>240924T094825Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275747#275747">Neil</a></td></tr>
 <tr d-ix="5"><td>111</td><td>Nim</td><td>240925T030602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275767#275767">Archar G</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Uiua</td><td>240925T025223Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275766#275766">noodle p</a></td></tr>
@@ -45,7 +45,15 @@
 <tr d-ix="16"><td>057</td><td>JavaScript Node.js</td><td>240924T080613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275740#275740">l4m2</a></td></tr>
 <tr d-ix="17"><td>038</td><td>Brachylog</td><td>240924T081621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275739/print-4-billion-if-statements/275742#275742">Fatalize</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 93 bytes</h1>
+
+<pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(i=0;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
+</code></pre>
+<p>Outputs &quot;segments&quot; in reverse order.</p>
+<p>-11 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a>
+<a href="https://tio.run/##LcxNCoMwEEDhvaeQgcAMJCBdOhQv4kYSI7NoIv4hhJw9DbVv/fGsWawtxaNQWs9jR1jwpgTEPm4o747XTcLhEW6jzqH/mRHUPlYCWrQYo14DzNccoIfoHJAWJn5muapc6qD9TBLwiuIoNe0/j8RNLl8" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++ (gcc)</a>, <s>176</s> <s>137</s> 136 bytes</h1>
 
 <pre class="lang-cpp prettyprint-override"><code>#import&lt;cstdio&gt;
 f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i++&amp;1?&quot;even&quot;:&quot;odd&quot;),i;);puts(&quot;}&quot;);}
@@ -57,7 +65,7 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 <p>Thanks to Neil for suggesting changing <code>printf</code> to <code>puts</code>.</p>
 <p>Borrows from the <a href="https://codegolf.stackexchange.com/a/275753/119678">C (gcc) answer</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/maxbergmark/mathgolf/blob/master/math_golf.txt" rel="nofollow noreferrer">MathGolf</a>, 22 <a href="https://github.com/maxbergmark/mathgolf/blob/master/code_page.py" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>♥ór{&quot;]y=╛{♣A+╦╖8Çα§q}&quot;
 </code></pre>
 <p>(Will output nothing for undefined inputs - e.g. any negative integers; positive integers above 4294967295; or non-integer inputs.)</p>
@@ -95,7 +103,7 @@ f(){puts(&quot;#import&lt;cstdio&gt;\nf(unsigned x){&quot;);for(int i;printf(&qu
 <li>†† With the <code>q</code>, it seems to think there is still a string on the stack when it does the <code>=</code>, even though the potential <code>&quot;even&quot;</code>/<code>&quot;odd&quot;</code> is within the if-statement block that it cannot reach during execution. Also, the <code>]y</code> would have already joined it together with the digits if that were the case anyway.. So not entirely sure why the <code>q</code> is necessary, but without it <a href="https://tio.run/##fdOhDQJBFIRhP60Qkp23t3d7AkEhCAwgIBgMIWgqWBJykgQ0LYCniG3koIE3@lfvy7zd8rBZ77ercQyL46yW4VRv9/mklkct1/y5fF/v55l@Mj9FPzV@Sn5q/dT5KfupFycrDuFBAUIhQkFCYUKBQqFCwULhYsLF1E6EiwkXEy4mXEy4mHAx4WLCJQqXKFz@fwfCENEgoUWHjB4MiMSUSOEH" rel="nofollow noreferrer">it'll give an error on all inputs in the range <code>[0,4294967294]</code> and will only succeed without errors for the max 4294967295 itself - or invalid inputs</a>.</li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 143 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 143 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>c=echo
 $c case \$1 in
 paste &lt;($c &quot;`$c {1..4294967295..2}&quot;)$c odd;;
@@ -116,14 +124,6 @@ $c esac
 <pre><code>esac
 </code></pre>
 <p>Bash brace expansions (which is what {x..y..step} is) are applied to their surrounding string, so <code>a{b,c}</code> returns <code>ab ac</code>. we build an array of all odds and another of all evens, then we zip them by pasting one from each array, converting tabs to newlines, and repeating until both arrays are exhausted.</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C (gcc)</a>, <strike>104</strike> 92 bytes</h1>
-
-<pre class="lang-c prettyprint-override"><code>f(i){puts(&quot;g(x){&quot;);for(;printf(&quot;x-%u?:puts(\&quot;%s\&quot;);&quot;,i,i--%2?&quot;even&quot;:&quot;odd&quot;),i-1;);puts(&quot;}&quot;);}
-</code></pre>
-<p>Outputs &quot;segments&quot; in reverse order.</p>
-<p>-12 thanks to <a href="https://codegolf.stackexchange.com/users/11259/digital-trauma">Digital Trauma</a> and <a href="https://codegolf.stackexchange.com/users/119678/squarefinder">SquareFinder</a></p>
-<p><a href="https://tio.run/##LYy7CoUwEAV7v0IWArtgCi3dwh@xkcTIFibiCyHk23PD1VPOGcboxZicHQrF7ToPhAUfikDswo687eJPh/BodQ39XxhBHWP5oZFGtFbdAPM9e@ghWAtUWMvEbysVL@WSqNdJPN5BLMWq/uaQuEr5Bw" rel="nofollow noreferrer" title="C (gcc) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, <s>27</s> <s>26</s> 24 bytes</h1>
 <pre><code>ＦＸχχ«´¿´⁼Ｉι´θ§⪪evenodd⁴ι
