--- a/q/275689.html
+++ b/q/275689.html
@@ -48,7 +48,7 @@
 <pre class="lang-c prettyprint-override"><code>int f(char* a)
 {
    int c = 0;
-   for (int i = 0; i &lt; 19682; i++)
+   for (int i = 0; i &lt;= 19682; i++)
    {
       char b[80] = {};
       int x = 0;
