--- a/q/275689.html
+++ b/q/275689.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>172</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
+<tr d-ix="0"><td>168</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
 <tr d-ix="1"><td>166</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
 <tr d-ix="2"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
 <tr d-ix="3"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
@@ -39,11 +39,11 @@
 <tr d-ix="10"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
 <tr d-ix="11"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 172 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 168 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;i++){for(p=9,x=o=0,j=i;p--;j/=3)b[p]=&quot;x o&quot;[d=j%3],x+=!d,o+=d&gt;1;if(!bcmp(a,b,36))for(p=13,j=c;p--;j/=2)a[p]=48+j%2;c+=x==o|x==o+1;}}
+<pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;i++){for(p=9,x=o=0,j=i;p--;j/=3)b[p]=&quot;x o&quot;[d=j%3],x+=!d,o+=d&gt;1;if(!bcmp(a,b,36))for(p=13;p--;c/=2)a[p]=48+c%2;c+=x==o|x==o+1;}}
 </code></pre>
-<p><a href="https://tio.run/##bVDbboMwDH3vV7hIlZJi1BaqaVXqfsH@gPEAoVRBLUGlU9k6fn0s4aIVaX6wchyfYx9LT57j4tS2CnOsUaPEElNMwl0kMraM@SPTVyZJ0VqovX/cCuW6fbGkHdakaY05KVF6nshXFPAkLCNyatBOmFK@CCKsXZqnqF1KDxuhMjZP5KVkMSYYvHDeS20CoyJHFZ/HVmX76uYLX0iXaiL9bZO7EU3TquIGl1gVjMNjBiZMYQm3Y3WrwggIHvDm1Da0CQcHBDBBGibIwGekYYL6P/vodB1oxDgYpP4wmaBSX0edsW4NDqsRL/tC32/cArMke1BQ@45rHuaog5VR1bJCf93ZGYbZuMtKlp/dEBwcq4j//ZdXQ86YEy7OleEerA3b9tTSr/gPx1Dei2l/M2tm7Y/MzvGpar37Lw" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bVBRboMwDP3vKVykSgkYtYVqWpW6J9gNGB8QShXUElQ6la3j6mMJUK1I84eV5/g9@1n68pSUx65TWGCDGiVWmGEabWORMzfh91xfmCRFK6F2wWEjlOcNxYq22JCmFRakROX7olhSyNOoislpQDtRRsUijLHxaJ6h9ijbr4XK2TyV54olmGL4wvkgtQ57BbmkgCdWYfPqyUUgpEcNkf62yVuLtu1UeYVzokrG4T4DE6bgwvVQX@soBoI7vDmNDW3CwREBTJCGCTLwGWmYoOHPPnpdB1rxGAxSf5hMUKuvg85ZvwaH5QO7Q2HoN06BWZI9JqhdzzUPc9DRykPVsqJg1dsZh9m4yVpWn/0QHB2rmP/9VxdDzpkTLU614e6tDdv21DKs@A/HUN7LaX87a2fdj8xPybHu/Nsv" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 <p>Ungolfed:</p>
 <pre class="lang-c prettyprint-override"><code>int f(char* a)
 {
