--- a/q/275689.html
+++ b/q/275689.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>166</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
+<tr d-ix="0"><td>163</td><td>C clang</td><td>240924T152052Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275752#275752">jdt</a></td></tr>
 <tr d-ix="1"><td>166</td><td>Python 3.8 prerelease</td><td>240923T000833Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275699#275699">David Ch</a></td></tr>
 <tr d-ix="2"><td>177</td><td>Haskell</td><td>240924T204832Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275760#275760">Antonio </a></td></tr>
 <tr d-ix="3"><td>121</td><td>Python 3</td><td>240924T030039Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275732#275732">tsh</a></td></tr>
@@ -39,11 +39,11 @@
 <tr d-ix="10"><td>017</td><td>Vyxal</td><td>240923T072643Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275707#275707">emanresu</a></td></tr>
 <tr d-ix="11"><td>032</td><td>Charcoal</td><td>240922T213047Z</td><td><a href="https://codegolf.stackexchange.com/questions/275689/tic-tac-toe-encode-them-all/275696#275696">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 166 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, 163 bytes</h1>
 
-<pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;i++){for(p=9,x=o=0,j=i;p--;j/=3)b[p]=&quot;x o&quot;[d=j%3],x+=!d,o+=d&gt;1;for(p=bcmp(a,b,36)?0:13;p--;c/=2)a[p]=48+c%2;c+=x==o|x==o+1;}}
+<pre class="lang-c prettyprint-override"><code>i,j,x,o,c,p,d,b[9];f(*a){for(c=i=0;i&lt;2e4;c+=x==o|x==o+1){for(p=9,x=o=0,j=i++;p--;j/=3)b[p]=&quot;x o&quot;[d=j%3],x+=!d,o+=d&gt;1;for(p=!bcmp(a,b,36)*13;p--;c/=2)a[p]=48+c%2;}}
 </code></pre>
-<p><a href="https://tio.run/##bZBRboMwDIbfewoPqRI0RqVQTetSbxfYDRgPEEoV1JKodCpbx9XHEqBakeYHK7/jL85v4YtDWu27TmKJDSoUqDHHLN4kvHAXqXct1MkVJCngchvu1lwyNhQ1bbAhRQGWJLn2fV4uKfKyWCfkNKCcOKdyHiXYMHrIUTHKX1Z8IDNx1G6KGUaP3mvwvIp6Xiwp9FLLr5@YmIdcMGqI1LdNbMXbtpPVGY6prFwPrjMwYQoLOO/qcx0nQHCFN6exoUw4OCqAiVIwUUbeKwUTNdzZQ/@uAy2/DQahPkwmqOXXThVu/w0Plje9GApDvzEOroXsKkFue9YczDpHK7dXLRWHQW9nHGbjImqhP/shODqWifd3r08GLlwnnh9qw75YG7btrmX44j@MQd6raX87a2fdjygO6b7u/Msv" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##bZDhboIwEMe/@xQniQnQIyqYZaaeT7A3YHyAIqZEaSMusjlefawFySTZfbj0f3e/Xv8VgTil1bHrJJbYoEKBGnPM4m3CC9dPvXuhLq4gSSsud@FhwwWjhkh928TWQ1/TFhtStMKSJGNcBwEvlxR5WawTchpQTpxTuYgSbBjNc1SM8v2aD@w8E2ftpphh9OL566jHxZJCL7X45pWJRcjbtpPVFc6prFwP7jMwYQo@XA/1tY4TILjDm9PYUCYcfCiAiVIwUUY@KwUTNfTsob/XgZaPi0GoD5MJavl1UIXbP8OD5aj9oTDMG6PgWsj@I8hdz5oDY6OV8VZLxeGqt/NYZuMmaqE/@yX4cCwT76@vLwYuXCdenGrD7q0NO/Y0MjzxH8Yg79V0vp21s@5HFKf0WHfB7Rc" rel="nofollow noreferrer" title="C (clang) – Try It Online">Try it online!</a></p>
 <p>Ungolfed:</p>
 <pre class="lang-c prettyprint-override"><code>int f(char* a)
 {
