--- a/q/275587.html
+++ b/q/275587.html
@@ -26,21 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>022</td><td>Haskell</td><td>240917T151809Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275589#275589">pxeger</a></td></tr>
+<tr d-ix="0"><td>001</td><td>Javascript</td><td>240925T175656Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275777#275777">corvus_1</a></td></tr>
+<tr d-ix="1"><td>022</td><td>Haskell</td><td>240917T151809Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275589#275589">pxeger</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 22 bytes</h1>
+<div id="pu0" class="pu"><h1>Javascript, 1 byte</h1>
+<pre><code>0
+</code></pre>
+<p>This monad is isomorphic to <code>Identity ()</code>. All values of the monad are <code>0</code>.</p>
+<p>The expression <code>0</code> defines a &quot;function&quot; with zero arguments (as in Haskell) that works as both <code>unit</code> and <code>bind</code>. As <a href="https://codegolf.stackexchange.com/users/97857/pxeger">pxeger</a> noted, this bends our rules very much, but I think it's still fun to think about, so I posted this.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 22 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t=R t
 R x%f=f x
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW21ISSxIVfBVKbIMUSriCFCpU02zTFCogkjcrMvOKSxLzklMV3ErzkkvyixR8ueBCjgUFOZnJiSWZZalAA8ozUotSFQpKgYStQhBClW9-XmIKXF7Dzs5WE6hAQ1WTiys3MTMPyC4oLQkuKVJQyixRSM7PLcjMSS1WgtgPcyQA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW21ISSxIVfBVKbIMUSriCFCpU02zTFCogkjcrMvOKSxLzklMV3ErzkkvyixR8ueBCjgUFOZnJiSWZZalAA8ozUotSFQpKgYStQhBClW9-XmIKXF7Dzs5WE6hAQ1WTiys3MTMPyC4oLQkuKVJQyixRSM7PLcjMSS1WgtgPcyQA" rel="noreferrer">Attempt This Online!</a></p>
 <p>First, a definitely-correct answer. This is the identity monad: the type constructor is called <code>M</code>, the unit constructor is called <code>R</code>, and the bind combinator is called <code>(%)</code>.</p>
 <p>I defined a <code>Monad</code> instance in the footer to demonstrate that the operations have the correct types. I hope it's clear why the monad laws hold.</p>
 <hr />
-<h1>Pure <a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 12 bytes</h1>
+<h1>Pure <a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 12 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t
 z=z
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWa1ISSxIVfBVKuKpsqyBCN8sy84pLEvOSUxXcSvOSS_KLFHy54EKOBQU5mcmJJZllqUBt5RmpRakKBaVAwlahCqHKNz8vMQUur2FnZ6sJVsCVm5iZB2QVlJYElxQpKGWWKCTn5xZk5qQWK0FshzkMAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWa1ISSxIVfBVKuKpsqyBCN8sy84pLEvOSUxXcSvOSS_KLFHy54EKOBQU5mcmJJZllqUBt5RmpRakKBaVAwlahCqHKNz8vMQUur2FnZ6sJVsCVm5iZB2QVlJYElxQpKGWWKCTn5xZk5qQWK0FshzkMAA" rel="noreferrer">Attempt This Online!</a></p>
 <p>By &quot;pure&quot; I mean with no exceptions and no <code>unsafePerformIO</code> etc.</p>
 <p>Highly debatable, but I think it's technically valid. My type constructor is called <code>M</code> (the resulting type just happens to have no values), my unit constructor is called <code>z</code>, and my bind combinator is also called <code>z</code>. Here's my proof of the monad laws:</p>
 <ol>
@@ -52,19 +59,19 @@ z=z
 </li>
 </ol>
 <hr />
-<h1>Pure, halting <a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 22 bytes</h1>
+<h1>Pure, halting <a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 22 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t=R
 r _=R
 _%_=R
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW21ISSxIVfBVKbIO4ihTigWS8KpCESN6syMwrLknMS05VcCvNSy7JL1Lw5YILORYU5GQmJ5ZklqUCDSjPSC1KVSgoBRK2CkUIVb75eYkpcHkNOztbTaACDVVNLq7cxMw8ILugtCS4pEhBKbNEITk_tyAzJ7VYCWI_zJEA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW21ISSxIVfBVKbIO4ihTigWS8KpCESN6syMwrLknMS05VcCvNSy7JL1Lw5YILORYU5GQmJ5ZklqUCDSjPSC1KVSgoBRK2CkUIVb75eYkpcHkNOztbTaACDVVNLq7cxMw8ILugtCS4pEhBKbNEITk_tyAzJ7VYCWI_zJEA" rel="noreferrer">Attempt This Online!</a></p>
 <p>Another silly one. This requires that <code>f</code> has no side effects <em>and</em> always halts.</p>
 <hr />
 <p>In fact, since <a href="https://codegolf.meta.stackexchange.com/a/12442">not taking input at all</a> is a valid standard I/O method, you could just have this:</p>
-<h1>Pure, halting <a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 10 bytes</h1>
+<h1>Pure, halting <a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 10 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t=R
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWq1ISSxIVfBVKbIMgAjdrMvOKSxLzklMV3ErzkkvyixR8ueBCjgUFOZnJiSWZZalATeUZqUWpCgWlQCJewVYhCKHONz8vMQWuQsPOzlYTqASiiCs3MTMPyCooLQkuKVJQyixRSM7PLcjMSS1WgrgB5jgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboWq1ISSxIVfBVKbIMgAjdrMvOKSxLzklMV3ErzkkvyixR8ueBCjgUFOZnJiSWZZalATeUZqUWpCgWlQCJewVYhCKHONz8vMQWuQsPOzlYTqASiiCs3MTMPyCooLQkuKVJQyixRSM7PLcjMSS1WgrgB5jgA" rel="noreferrer">Attempt This Online!</a></p>
 <p>Here, my type constructor is called <code>M</code>, my unit constructor is called <code>R</code> (just make sure not to pass it any arguments), and my bind combinator is also called <code>R</code> (also no need to pass the arguments).</p>
 <hr />
 <p>If I can argue this &quot;I/O method&quot; is allowed for the 3rd monad, maybe you can argue that this alone is valid for the 2nd monad? <code>unit</code> and <code>bind</code> take input by... not being called at all?</p>
@@ -72,13 +79,13 @@ _%_=R
 </code></pre>
 <hr />
 <p>There's probably room for some more silly-but-valid Monads. But here's a non-trivial one - the Option monad:</p>
-<h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 30 bytes</h1>
+<h1><a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 30 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t=N|R t
 N%_=N
 R t%f=f t
 </code></pre>
 <p>The unit constructor is called <code>R</code>, and the bind combinator is called <code>(%)</code>.</p>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW-1ISSxIVfBVKbP1qghRKuPxU4239uIAs1TTbNIUSiKKbFZl5xSWJecmpCm6leckl-UUKvlxwIceCgpzM5MSSzLJUoEHlGalFqQoFpUDCViEIoco3Py8xBS6vYWdnqwlUoKGqycWVm5iZB2QXlJYElxQpKGWWKCTn5xZk5qQWK0HshzkWAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ8GCpaUlaboW-1ISSxIVfBVKbP1qghRKuPxU4239uIAs1TTbNIUSiKKbFZl5xSWJecmpCm6leckl-UUKvlxwIceCgpzM5MSSzLJUoEHlGalFqQoFpUDCViEIoco3Py8xBS6vYWdnqwlUoKGqycWVm5iZB2QXlJYElxQpKGWWKCTn5xZk5qQWK0HshzkWAA" rel="noreferrer">Attempt This Online!</a></p>
 </div>
 
 <table id="st">
