--- a/q/275779.html
+++ b/q/275779.html
@@ -26,9 +26,19 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>Charcoal</td><td>240925T211658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275780#275780">Neil</a></td></tr>
+<tr d-ix="0"><td>132</td><td>Python3</td><td>240925T213810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275781#275781">Ajax1234</a></td></tr>
+<tr d-ix="1"><td>021</td><td>Charcoal</td><td>240925T211658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275780#275780">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 21 bytes</h1>
+<div id="pu0" class="pu"><h1>Python3, 132 bytes</h1>
+<pre class="lang-py prettyprint-override"><code>def f(d,e):
+ q=[(1,1)]
+ for m,n in q:
+  if all(i%(m+n)&lt;m for i in d)and all(i%(m+n)&gt;=m for i in e):return m,n
+  q+=[(m+1,n),(m,n+1)]
+</code></pre>
+<p><a href="https://tio.run/##VY3BCoMwDEDvfkUug5bmsKpzOuZ@RDwItaxgoxZ32Nd36dhAbyHv5WV5b8@ZinoJMZrRghUGR3nLYG07oVHLPgM7B/BI4AhWJuAsDNMk3El4RfLuv4JL2MiBzB4@2h3lbhi3V6BU486q@IdXGkmi4JXib3EJjjZhRXdGKBBKhBpB6x6huyBUPOe9lNley3mf@BWhOTC@1xz4HzesVgchpTmZl8lg@1eIHw" rel="nofollow noreferrer">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 21 bytes</h1>
 <pre><code>→Ｗ¬›⌊﹪ηⅈ⌈﹪θⅈＭ→Ｉ⟦ⅈ⌊﹪ηⅈ
 </code></pre>
 <p><a href="https://tio.run/##bYw9CwIxEER7f8WWu7AWfoJeeYVVRKyEkCKcwQRytxhzp/8@prBQcGCqN/M6b1MnNpaiZHK4P4ebz9TMnj5EB3iUjIfkbHYJVRhCP/ao5DpGQc9wQSJiUPb1De4fUAO/0lMKQ8bWPjLqOqnPv0pD1JSi9Yphsa41DHrDsGNYbo0p8ym@AQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs <code>m+n</code> and <code>m</code>. Explanation:</p>
