--- a/q/275587.html
+++ b/q/275587.html
@@ -26,11 +26,20 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>058</td><td>C++20 gcc</td><td>240925T201656Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275778#275778">G. Sliep</a></td></tr>
-<tr d-ix="1"><td>001</td><td>Javascript</td><td>240925T175656Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275777#275777">corvus_1</a></td></tr>
-<tr d-ix="2"><td>022</td><td>Haskell</td><td>240917T151809Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275589#275589">pxeger</a></td></tr>
+<tr d-ix="0"><td>037</td><td>OCaml</td><td>240925T225024Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275783#275783">Daniel S</a></td></tr>
+<tr d-ix="1"><td>058</td><td>C++20 gcc</td><td>240925T201656Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275778#275778">G. Sliep</a></td></tr>
+<tr d-ix="2"><td>001</td><td>Javascript</td><td>240925T175656Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275777#275777">corvus_1</a></td></tr>
+<tr d-ix="3"><td>022</td><td>Haskell</td><td>240917T151809Z</td><td><a href="https://codegolf.stackexchange.com/questions/275587/implement-a-monad/275589#275589">pxeger</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++20 (gcc)</a>, 58 bytes</h1>
+<div id="pu0" class="pu"><h1>OCaml, 37 bytes</h1>
+<pre><code>type 'a m=M;;let u x=M;;let b x f=M;;
+</code></pre>
+<p>This implements a single-valued monad with constructor <code>u</code> and bind operation <code>b</code>.</p>
+<p>And for an example of a non-trivial monad, let's see <code>Reader&lt;int&gt;</code> monad in 53 bytes:</p>
+<pre><code>type 'a m=int-&gt;'a;;let u x _=x;;let b x f s=f(x s)s;;
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://gcc.gnu.org/" rel="nofollow noreferrer">C++20 (gcc)</a>, 58 bytes</h1>
 
 <pre class="lang-cpp prettyprint-override"><code>template&lt;class T&gt;struct M{T t;M b(auto f){return{f(t)};}};
 </code></pre>
@@ -51,13 +60,13 @@
 </code></pre>
 <p><a href="https://tio.run/##VY6xasMwEEB3fcVBF5uQBrra8VLI5q1bKUU@y45APgnrlKQY/3rdc2iJe5M48d49DGHfIy4LmyE4zaZEp2OEtyrymJChnmpoMp3Y59NoOI00zcU8F8uTJXSpNVB2iZCtJ@0q9diiaMzIlVKWGAZtKcthUiBzOMCrp98DGshcgb@Cuf@laKmHk/dwhLoUtCrUBrqIUpCLdskAe@Cz@c@vpXATWBRSumGHxpIR9i8XrpbPd8Eg7S1YKdKEG00nmvePLF89D/fnur49N1mXF2pevrFzuo/LvkMvdGB5Rm6PuNu96B8" rel="nofollow noreferrer" title="C++ (gcc) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Javascript, 1 byte</h1>
+<div id="pu2" class="pu"><h1>Javascript, 1 byte</h1>
 <pre><code>0
 </code></pre>
 <p>This monad is isomorphic to <code>Identity ()</code>. All values of the monad are <code>0</code>.</p>
 <p>The expression <code>0</code> defines a &quot;function&quot; with zero arguments (as in Haskell) that works as both <code>unit</code> and <code>bind</code>. As <a href="https://codegolf.stackexchange.com/users/97857/pxeger">pxeger</a> noted, this bends our rules very much, but I think it's still fun to think about, so I posted this.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 22 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="noreferrer">Haskell</a>, 22 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>data M t=R t
 R x%f=f x
 </code></pre>
