--- a/q/105998.html
+++ b/q/105998.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>052</td><td>Vyxal 3 j</td><td>240925T134958Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275775#275775">pacman25</a></td></tr>
-<tr d-ix="1"><td>158</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
-<tr d-ix="2"><td>059</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
-<tr d-ix="3"><td>174</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
+<tr d-ix="0"><td>164</td><td>Zsh</td><td>240906T084713Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275383#275383">roblogic</a></td></tr>
+<tr d-ix="1"><td>052</td><td>Vyxal 3 j</td><td>240925T134958Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275775#275775">pacman25</a></td></tr>
+<tr d-ix="2"><td>158</td><td>JavaScript Node.js</td><td>170107T170956Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106004#106004">Arnauld</a></td></tr>
+<tr d-ix="3"><td>059</td><td>Japt R</td><td>240807T135148Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/274755#274755">Shaggy</a></td></tr>
 <tr d-ix="4"><td>192</td><td>Java JDK</td><td>240905T154702Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275375#275375">Fhuvi</a></td></tr>
 <tr d-ix="5"><td>164</td><td>C clang</td><td>240907T150544Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275402#275402">jdt</a></td></tr>
 <tr d-ix="6"><td>151</td><td>ARBLE</td><td>240906T021006Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/275381#275381">ATaco</a></td></tr>
@@ -65,7 +65,17 @@
 <tr d-ix="36"><td>172</td><td>Befunge</td><td>170107T205422Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106028#106028">James Ho</a></td></tr>
 <tr d-ix="37"><td>179</td><td>C</td><td>170107T171910Z</td><td><a href="https://codegolf.stackexchange.com/questions/105998/recreate-the-ascii-table-as-an-ascii-table/106005#106005">simon</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a> <code>-j</code>, 52 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 164 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12;c=(Space {!..~} DEL)
+for n ({32..63})for i (0 32 64){k=$[n+i];z='| ';((i&gt;32))&amp;&amp;z=\\n;printf %-5s%-6s$z $k $c[k-31]}
+</code></pre>
+<p><a href="https://tio.run/##Fce7DoIwAAXQ3a@4kgJttI1QJSalLuLm5ggMSiAgCRDoxMNfx5AznXEo19VoK8oz4F72AGZYKgxDYjaxd7ym6tsa8IFz8A@H56tM01f3znJMeyF@C6LHk@2KtkcDOklfiEAubHsFeoL0EZzZVGsSN4cqVaN2Z7iK0uomfcYcZ9RJ0qiurxpTwOaXwebBQEaQGiSLay69dFnXPw" rel="nofollow noreferrer">Try it online!</a>
+<sub><s><a href="https://tio.run/##HclBC4IwAIbhe7/iS6Zt1CSdSTHXJbt166hCNQpNmKE7mfbXjeI9Pbx9V06TVU5618ChbAEMcGSSJMT@yoLVtpDPxoJ3nIPfOIJQakXPr6u@4/I/GrsIc@SfC9Ljic0eTQsD@hah78diZD9XoGuIEHHE3rUimVlWhezVYsBCUlrtRciY5/Uqz418tZWxD7h807k87kgPUoPorOYiKMZp@gI" rel="nofollow noreferrer">174b</a></s></sub>
+<sub><s><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">182b</a></s></sub>
+<sub><s><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">193b</a></s></sub>
+<sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-3/" rel="nofollow noreferrer">Vyxal 3</a> <code>-j</code>, 52 bytes</h1>
 <pre><code>&quot;∑ᵂ”kPḢ\&quot;DEL&quot;W5»₃₆Rᵛᶲ5»ᶻ+₃ẆT'-37×p&quot;ġ!-x7ᵏ”2Ḋ3YpƛᶲḢḢṪ
 </code></pre>
 <p><a href="https://vyxal.github.io/latest.html#H4sIAAAAAAAACqtWSssvyk0sUbIy0lHKSE1MSS1SslJS0lFKzk9JBbJilB51THy4telRw9zsgIc7FsXExCi5uPrEKIWbHtr9qKn5UVNb0MOtsx9u2wTkP9y2Wxso9nBXW4i6rrH54ekFMUpHFirqVpg_3NoPNMHo4Y4u48iCYyDlQLNAaOcqoF1p-fklMHvTchLTi5WsopWylGJ1lDLzCkpLQFwguyy1qDgzPw-ozFjPRM_QQKkWADASUu29AAAA" rel="nofollow noreferrer">Vyxal It Online!</a></p>
@@ -90,7 +100,7 @@
 <p>Vyxal prints its lists in python form, but all lists are actually stored as [ a | b | c ].
 The stringify modifier converts the list of lists to a list of strings in this form rather than the pretty printed one, so the map function also removes the brackets and extra leading space. This leaves the nested list delimiters with proper spacing for the challenge. The line of dashes is not a list, so it has to be length 37 to account for the extra three removed by the list to string formatting.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 158 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 158 bytes</h1>
 <p><em>-11 by switching to Node.js, as suggested by <a href="https://codegolf.stackexchange.com/users/116582/fhuvi">Fhuvi</a></em><br />
 <em>-1 thanks to <a href="https://codegolf.stackexchange.com/users/58974/shaggy">Shaggy</a></em></p>
 
@@ -101,7 +111,7 @@ ${&quot;-&quot;.repeat(34)}
 </code></pre>
 <p><a href="https://tio.run/##FY5LC4JAFIX3/orh0mIuppCjUpIjlO7auYzAQWd6IFcZrU312206y/P4OA/1UlNr7@Mc0NDpZTE55ZIKTlKmBbAPg6zxGvQ5@QAYjqqrqOOJMzZRuqcCyuoE2eFpjLb8TBf0gTmBb9wiJ7lLiiAVmYgQHWj1hgBCq0etZi5i/Hoicu16VK1u/vB6Vnbm22gNpW4ZO96si90JdLw0xqUdaBp6HfbDlRuOuPwA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> <s>60</s> 59 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, <s>65</s> <s>64</s> <s>63</s> <s>62</s> <s>60</s> 59 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p><em>Still</em> not happy the insertion of the line of dashes. And the <code>trim</code> is annoying me now, too! Another approach may be needed.</p>
 <pre><code>Hó96
 ;íE¬h`Spa­` p&quot;DEL&quot;)òUÎ Ëi&quot;DCehcr&quot;ó)ú5 m¬ÃÕËq|û3)xÃyÈiÉ
@@ -140,15 +150,6 @@ H                                                               :32
                                                          iÉ     :  Insert a &quot;-&quot; at 0-based index 1
                                                                 :Implicit output joined with newlines
 </code></pre>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>239</s></sub> <sub><s>193</s></sub> <sub><s>182</s></sub> 174 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>t=&quot;Dec  Chr   | &quot;;&lt;&lt;&lt;$t$t$t[1,8];jot -s-- -b- 12;c=(Space `jot -c 94 ! \~` DEL)
-for n ({32..63})for i (0 32 64){k=$[n+i];z='| ';((i&gt;32))&amp;&amp;z=\\n;printf %-5s%-6s$z $k $c[k-31]}
-</code></pre>
-<p><a href="https://tio.run/##HclBC4IwAIbhe7/iS6Zt1CSdSTHXJbt166hCNQpNmKE7mfbXjeI9Pbx9V06TVU5618ChbAEMcGSSJMT@yoLVtpDPxoJ3nIPfOIJQakXPr6u@4/I/GrsIc@SfC9Ljic0eTQsD@hah78diZD9XoGuIEHHE3rUimVlWhezVYsBCUlrtRciY5/Uqz418tZWxD7h807k87kgPUoPorOYiKMZp@gI" rel="nofollow noreferrer">Try it online!</a>
-<sub><s><a href="https://tio.run/##FYy7DoIwAEV3vuIGC7bRGimKJqUu6ubmiAzYQEASIJSJx7cj5EwnOff2Jp/nTtmPVAP3vAUwwpZhGJJuJfL211j@6g7ccA7@5fCEldUtKtDBF4dD4E9s9QL0CF8gOLGhVCSqdkUMrchAN6ycLJ2YFKTEsmFavZtEp1J64rLI4/mSk@zVdsRWUlrcloS5bq8@n0o2bVF1GWyHn43DA0N6e70heprnPw" rel="nofollow noreferrer">182b</a></s></sub>
-<sub><s><a href="https://tio.run/##PYuxDoIwAER3v@KChbbRGmmRmJSyqJubIzpoIwFJ0FAmkW9HiIm5W@693NsVw9Aab3@3wK5oAHzg6SRJSDslC5fbi348W4gbBIQDpVDRLH82qME6JVerWPV82iXYGkoijnhXGZLVi/KirSEdm/Oq14xViVKcB4E1p9fV3mcjSUMZ/9D@cNS5ob7YOF/E7gM6PspUyUn/xcada6pfTVm3OcjYCsT2w/AF" rel="nofollow noreferrer">193b</a></s></sub>
-<sub><s><a href="https://tio.run/##XY6xDoIwFEV3vuIFi0CURqigCbxJ3NwciYMpEFzahjIJ/XYEjMaYu56cc5@6GccO7bziAKemBYAB7DTLMtLNK8Lt8Zaq9iG6GgKH7jT0IaVsb9KKN9KqZQsCvJ5FlCbM@D1H0nsrX5jU8wQii3x/veZ4VXdefTyuE8TaCRI9uEAEEG5JJIXYsOibcuGXkbBIpbHUBMoFLN8hNYcUYhgd5lKJ@fnyL4n15FBAyuWzGccX" rel="nofollow noreferrer" title="Zsh – Try It Online">239b</a></s></sub></p>
 </div>
 <div id="pu4" class="pu"><h1><a href="http://jdk.java.net/" rel="nofollow noreferrer">Java (JDK)</a>, 192 <sup><s>194</s> <s>200</s></sup> bytes</h1>
 <blockquote>
