--- a/q/275689.html
+++ b/q/275689.html
@@ -50,7 +50,7 @@
    int c = 0;
    for (int i = 0; i &lt;= 19682; i++)
    {
-      char b[10] = {};
+      char b[9];
       int x = 0;
       int o = 0;
       int j = i;
