--- a/q/275779.html
+++ b/q/275779.html
@@ -26,16 +26,17 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>085</td><td>JavaScript V8</td><td>240926T024815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275784#275784">l4m2</a></td></tr>
+<tr d-ix="0"><td>083</td><td>JavaScript V8</td><td>240926T024815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275784#275784">l4m2</a></td></tr>
 <tr d-ix="1"><td>132</td><td>Python3</td><td>240925T213810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275781#275781">Ajax1234</a></td></tr>
 <tr d-ix="2"><td>021</td><td>Charcoal</td><td>240925T211658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275780#275780">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 85 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 83 bytes</h1>
 
-<pre class="lang-javascript prettyprint-override"><code>x=&gt;g=(y,i,h=(q,a)=&gt;n=Math.min(...q.map(t=&gt;t*a%i)))=&gt;h(x,-1)+h(y,1)&gt;0?[n,i-n]:g(y,-~i)
+<pre class="lang-javascript prettyprint-override"><code>x=&gt;g=(y,i,h=(q,a)=&gt;n=Math.min(...q.map(t=&gt;t*a%i)))=&gt;h(x,-1)+h(y,1)&gt;0?[n,i]:g(y,-~i)
 </code></pre>
-<p><a href="https://tio.run/##VczBCoMwDIDh@56il0GzxWKdOh3UPcGeQDyUgbYDi7oi7rJX7yJs4G4h@fI/9Kyf98kOPpqL0KqwqKpT/IUWjeIjalCVUzftjeit40KIUfR64F5V/qD3FoCA4QtGEo6G/iRU8bV2aCPXXDpaRG8LYZis87zldYzshCxFViCTsgFeZ8hympMGM4DdFiZ0WcUZWdlsb1SQlPi9l0TzP7DGKZqkqyD9LYQP" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##VczBCoMwDIDh@56il0GzxWKdOh3UPcGeQHooA20HFnVF3GWv7iJs4G4J@fI/zGSe99H1IZqKpVHLrKpW8Rc6tIoPaEBVXt1MsKJzngshBtGZngdVhYPZOwACls8YSTha@pNQxdfao9OXltbo7WDpR@cDb3gdIzshS5EVyKTUwOsMWU5zojED2G1hQpdVnJGVenujgqTE770kmv@BNU7RJF0F6W9h@QA" rel="nofollow noreferrer" title="JavaScript (V8) – Try It Online">Try it online!</a></p>
 <p>1 layer try</p>
+<p>Output m+n, m</p>
 </div>
 <div id="pu1" class="pu"><h1>Python3, 132 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>def f(d,e):
