--- a/q/275779.html
+++ b/q/275779.html
@@ -26,11 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>083</td><td>JavaScript V8</td><td>240926T024815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275784#275784">l4m2</a></td></tr>
-<tr d-ix="1"><td>132</td><td>Python3</td><td>240925T213810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275781#275781">Ajax1234</a></td></tr>
-<tr d-ix="2"><td>021</td><td>Charcoal</td><td>240925T211658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275780#275780">Neil</a></td></tr>
+<tr d-ix="0"><td>065</td><td>R</td><td>240926T063046Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275785#275785">pajonk</a></td></tr>
+<tr d-ix="1"><td>083</td><td>JavaScript V8</td><td>240926T024815Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275784#275784">l4m2</a></td></tr>
+<tr d-ix="2"><td>132</td><td>Python3</td><td>240925T213810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275781#275781">Ajax1234</a></td></tr>
+<tr d-ix="3"><td>021</td><td>Charcoal</td><td>240925T211658Z</td><td><a href="https://codegolf.stackexchange.com/questions/275779/alien-weekends/275780#275780">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 83 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 65 bytes</h1>
+<pre class="lang-r prettyprint-override"><code>\(d,e){while(any(d%%T&gt;=F,e%%T&lt;F))if((F=F+1)&gt;T){F=0;T=T+1};c(T,F)}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=VY69CsJQDIV3nyIghQRj6639RW_B5a6C3NFF-oOCOIgiIj6JSxXcfCHfxliL4hSS851zcrlu61ul7_td1U-ekzkWXNLpsFytS1xsjlg4js204VLm2BCtKkSjTU9RZulk9GBkte2p8yhHy4bObdCjwhwHDEOGgCFhUIoYcgwZIll8oi70M5DV77SoL1LDxAxpqythYToDOQ29wAs913UbXnKVBH9DU_FHv9DwbRI9buB3vbT6QUOL9b8h_vxc15_5Ag" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Outputs <code>m+n</code>, <code>m</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://v8.dev/" rel="nofollow noreferrer">JavaScript (V8)</a>, 83 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>x=&gt;g=(y,i,h=(q,a)=&gt;n=Math.min(...q.map(t=&gt;t*a%i)))=&gt;h(x,-1)+h(y,1)&gt;0?[n,i]:g(y,-~i)
 </code></pre>
@@ -38,7 +45,7 @@
 <p>1 layer try</p>
 <p>Output m+n, m</p>
 </div>
-<div id="pu1" class="pu"><h1>Python3, 132 bytes</h1>
+<div id="pu2" class="pu"><h1>Python3, 132 bytes</h1>
 <pre class="lang-py prettyprint-override"><code>def f(d,e):
  q=[(1,1)]
  for m,n in q:
@@ -47,7 +54,7 @@
 </code></pre>
 <p><a href="https://tio.run/##VY3BCoMwDEDvfkUug5bmsKpzOuZ@RDwItaxgoxZ32Nd36dhAbyHv5WV5b8@ZinoJMZrRghUGR3nLYG07oVHLPgM7B/BI4AhWJuAsDNMk3El4RfLuv4JL2MiBzB4@2h3lbhi3V6BU486q@IdXGkmi4JXib3EJjjZhRXdGKBBKhBpB6x6huyBUPOe9lNley3mf@BWhOTC@1xz4HzesVgchpTmZl8lg@1eIHw" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 21 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 21 bytes</h1>
 <pre><code>→Ｗ¬›⌊﹪ηⅈ⌈﹪θⅈＭ→Ｉ⟦ⅈ⌊﹪ηⅈ
 </code></pre>
 <p><a href="https://tio.run/##bYw9CwIxEER7f8WWu7AWfoJeeYVVRKyEkCKcwQRytxhzp/8@prBQcGCqN/M6b1MnNpaiZHK4P4ebz9TMnj5EB3iUjIfkbHYJVRhCP/ao5DpGQc9wQSJiUPb1De4fUAO/0lMKQ8bWPjLqOqnPv0pD1JSi9Yphsa41DHrDsGNYbo0p8ym@AQ" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs <code>m+n</code> and <code>m</code>. Explanation:</p>
